// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleSettingsForm /> rendering should render a filled form when rule id after fetched 1`] = `Array []`;

exports[`<RuleSettingsForm /> rendering should render a filled form when rule id after fetched 2`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          New rule
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
    <div
      class="wrapper card"
    >
      <div
        class="header card-header"
      >
        <div
          class="title"
        >
          List of tickets triggering the rule
        </div>
        <div
          class="toggle"
        >
          <span
            class="material-icons ml-2"
          >
            keyboard_arrow_down
          </span>
        </div>
      </div>
      <div
        class="body card-body"
      >
        <div
          class="container"
        >
          <div
            class="inner"
            style="min-height: 60px;"
          >
            <i
              class="icon-custom icon-circle-o-notch md-spin"
              style="font-size: 40px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="navigation"
    />
  </div>
</div>
`;

exports[`<RuleSettingsForm /> rendering should render a loader when rule id before fetched 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          New rule
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
    <div
      class="wrapper card"
    >
      <div
        class="header card-header"
      >
        <div
          class="title"
        >
          List of tickets triggering the rule
        </div>
        <div
          class="toggle"
        >
          <span
            class="material-icons ml-2"
          >
            keyboard_arrow_down
          </span>
        </div>
      </div>
      <div
        class="body card-body"
      >
        <div
          class="container"
        >
          <div
            class="inner"
            style="min-height: 60px;"
          >
            <i
              class="icon-custom icon-circle-o-notch md-spin"
              style="font-size: 40px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="navigation"
    />
  </div>
</div>
`;

exports[`<RuleSettingsForm /> rendering should render an empty form when no rule id 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add rule
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="container pageContainer container-fluid"
  >
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;
